# phemex-py

./: .env.example  .gitignore  CHANGELOG.md  JUSTFILE  LICENSE.txt  README.md  pyproject.toml
.claude/: settings.json
src/phemex_py/: __init__.py  client.py  exceptions.py  products.json
src/phemex_py/core/: __init__.py  datetime.py  fields.py  models.py  products.py  requests.py
src/phemex_py/usdm_rest/: __init__.py  endpoints.py  models.py
tests/: conftest.py
tests/__integration__/: conftest.py
tests/__integration__/usdm/: test_async.py  test_sync.py
tests/core/: test_datetime.py  test_hardening.py  test_models.py  test_requests.py
