[project]
name = "phemex-py"
version = "0.2.0"
description = "Typed, production-grade Python SDK for the Phemex crypto exchange API"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Connor Stone" }
]
requires-python = ">=3.12"
keywords = ["phemex", "crypto", "exchange", "api", "sdk", "trading", "futures"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[project.urls]
Homepage = "https://github.com/cstone-io/phemex-py"
Repository = "https://github.com/cstone-io/phemex-py"
Issues = "https://github.com/cstone-io/phemex-py/issues"
Changelog = "https://github.com/cstone-io/phemex-py/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phemex_py"]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = []
markers = ["integration: marks tests as hitting external APIs (run with -m integration)"]
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
]
